frontend/yamls/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: v0-1-prod-registry-app
  namespace: prod-app-hilversum
  labels:
    app: registry-app
    release: "v0-1-prod"
spec:
  type: ClusterIP
  ports:
    - port: 8001
      name: http
      targetPort: 80
  selector:
    app: registry-app
    release: v0-1-prod
